# reddit-processing

./: .gitignore  CMakeLists.txt  FindSnap.cmake  Readme.md
Snap/: main.cpp
cmake/: FindSnap.cmake
include/: joiner.hpp  logger.hpp  reddit-joiner.hpp  reddit-parser.h  reddit-parser.hpp  splitter.h  splitter.hpp  table-splitter.hpp  user-data.hpp
scripts/: CMakeLists.txt  convert.py  download.py  hashmap.py  hashmap_test.py  hashtable.py  hm_test.py  join-reddit.py  join-submissions.py  libdict.cpp  log.py  make-subset.py  merge-reddit.py  performance_test.py  process-reddit.sh  pyshmht.py  reddit.py  runProc5.py  split-reddit.py  split-submissions.py  split-users.py  tester.py
src/: joiner.cpp  logger.cpp  main.cpp  reddit-join.cpp  reddit-joiner.cpp  reddit-parser.cpp  splitter.cpp  table-splitter.cpp  user-data.cpp
test/: bash_test.sh  dbm_test.py  get-redis.py  iter_test.py  problem.cpp  redis-test.py  sql_test.py  test.cpp  vote_text.csv
test/test_data/comments/: comments.csv
test/test_data/removal/: removal.csv
test/test_data/reports/: report.csv
test/test_data/submission/: submission.csv
test/test_data/subsciptions/: subscriptions.csv
test/test_data/users/: users.csv
test/test_data/votes/: votes.csv
test/tsv_converted/comments/: comments.tsv
test/tsv_converted/removals/: removal.tsv
test/tsv_converted/reports/: report.tsv
test/tsv_converted/submissions/: submission.tsv
test/tsv_converted/subscriptions/: subscriptions.tsv
test/tsv_converted/users/: users.tsv
test/tsv_converted/votes/: votes.tsv
